[package]
name = "plqueue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
ctrlc = { version = "3.4.1", features = ["termination"] }
env_logger = "0.10.1"
log = "0.4.20"
sled = "0.34.7"
